2006-10-31  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.py:
	Log the dvb card's frontend stats.

2006-10-30  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.py:
	Fix modulation for changed dvbsrc parameter enum format.
	Do the videoscale after videorate.

2006-10-04  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.py:
	Fix syntax error in pipeline template.

2006-10-04  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.py:
	* flumotion/component/dvb/dvb.xml:
	Add a mpegts feeder to dvb.

2006-10-04  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.py:
	Only scale if requested.  Add videorate and audiorate.

2006-10-04  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.py:
	Actually fix the pipeline template.

2006-10-04  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.py:
	Fix pipeline template.

2006-10-04  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* configure.ac:
	Remove check for twisted version, is implied by the
	flumotion check.

2006-10-04  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.xml:
	Rename freq property to frequency.